<resources>
    <string name="app_name">DIU Foodie Runner</string>
    <string name="server_client_id">676987649475-q71ie96dmlr1dpl6vegoeuvpqgjiraqd.apps.googleusercontent.com</string>
    <string name="logo">logo</string>
    <string name="food">food</string>
    <string name="back">back</string>
    <string name="registration">Registration</string>
    <string name="runner">Food Runner</string>
    <string name="or">or</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="nm">Mahdi</string>
    <string name="des">Student</string>
    <string name="pn">0184856883</string>
    <string name="type">8\",10\",12\"</string>

    <string name="admin">Admin</string>
    <string name="accept">accept</string>
    <string name="reject">reject</string>
    <string name="shop">Shop</string>
    <string name="nm_shop">Khan Shop</string>
    <string name="loc"></string>
    <string name="taha">৳</string>
    <string name="mul">×</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>