<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="40dp"
            app:cardBackgroundColor="@color/whiteX"

            app:cardCornerRadius="40dp"
            app:cardElevation="0dp"
            app:contentPadding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="40dp"
                app:cardElevation="0dp"

                >

                <ImageView
                    android:id="@+id/pic"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:background="@color/whiteY"
                    android:contentDescription="@string/logo"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_profile" />
            </androidx.cardview.widget.CardView>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView">

            <TextView
                android:id="@+id/nm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_bold"
                android:maxLines="1"
                android:text="@string/nm"
                android:textColor="@color/dark"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/des"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:drawablePadding="5dp"
                android:fontFamily="@font/ubuntu_regular"
                android:maxLines="1"
                android:text="@string/des"
                android:textColor="@color/dark"
                android:textSize="24sp"
                app:drawableStartCompat="@drawable/ic_work"
                app:drawableTint="@color/dark" />

            <TextView
                android:id="@+id/pn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:drawablePadding="5dp"
                android:fontFamily="@font/ubuntu_regular"
                android:maxLines="1"
                android:text="@string/pn"
                android:textColor="@color/dark"
                android:textSize="22sp"
                app:drawableStartCompat="@drawable/ic_phone"
                app:drawableTint="@color/dark" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"

                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ubuntu_bold"
                    android:text="Earnings: "
                    android:textColor="@color/dark"
                    android:textSize="18sp" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="7dp"
                    android:backgroundTint="@color/greenPop"
                    app:cardCornerRadius="50dp"
                    app:strokeWidth="0dp">

                    <TextView
                        android:id="@+id/earnings"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:drawablePadding="5dp"
                        android:fontFamily="@font/ubuntu_regular"
                        android:maxLines="1"
                        android:paddingHorizontal="7dp"
                        android:paddingBottom="2dp"
                        android:text="0"
                        android:textColor="@color/whiteX"
                        android:textSize="18sp"
                        app:drawableStartCompat="@drawable/ic_payments"
                        app:drawableTint="@color/whiteX"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toEndOf="@+id/nm"
                        app:layout_constraintTop_toTopOf="parent" />
                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>


        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginBottom="50dp"
            android:layout_weight="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/edit"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@drawable/btn_special_blck_bg"
                android:clickable="true"
                android:drawablePadding="25dp"
                android:focusable="true"
                android:fontFamily="@font/ubuntu_bold"
                android:gravity="center"
                android:paddingVertical="10dp"
                android:text="Edit Profile"
                android:textColor="@color/dark"
                android:textSize="20sp"
                app:drawableTint="@color/dark"
                app:drawableTopCompat="@drawable/ic_edit" />

            <TextView
                android:id="@+id/logout"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:background="@drawable/btn_special_blck_bg"
                android:clickable="true"
                android:drawablePadding="22dp"
                android:focusable="true"
                android:fontFamily="@font/ubuntu_bold"
                android:gravity="center"
                android:paddingVertical="10dp"
                android:paddingStart="13dp"
                android:paddingEnd="10dp"
                android:text="Logout"
                android:textColor="@color/dark"
                android:textSize="20sp"
                app:drawableTint="@color/dark"
                app:drawableTopCompat="@drawable/ic_logout" />
        </FrameLayout>

    </LinearLayout>
</ScrollView>
