<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/tia"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/btn_special_bg"
            android:contentDescription="@string/back"
            android:padding="10dp"
            android:src="@drawable/ic_arrow_back"
            app:tint="@color/whiteX" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="-60dp"
            android:padding="5dp"

            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginBottom="-5dp"
                android:contentDescription="@string/logo"
                android:src="@drawable/logo"
                app:tint="@color/whiteX" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/ubuntu_bold"
            android:text="@string/registration"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="-50dp"
            android:backgroundTint="@color/whiteX"
            app:cardCornerRadius="40dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="35dp"
                android:orientation="vertical"

                >

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginVertical="20dp"
                    app:cardBackgroundColor="@color/whiteX"
                    app:cardCornerRadius="35dp"
                    app:contentPadding="3dp">

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="35dp"

                        >

                        <ImageView
                            android:id="@+id/pic"
                            android:layout_width="110dp"
                            android:layout_height="110dp"
                            android:layout_gravity="center"
                            android:background="@color/whiteY"
                            android:contentDescription="@string/logo"
                            android:scaleType="centerCrop"
                            android:src="@drawable/cam1"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.cardview.widget.CardView>
                </androidx.cardview.widget.CardView>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="-10dp"
                    android:hint="Runner Name"
                    app:boxBackgroundColor="@color/whiteX"
                    app:boxStrokeColor="?colorPrimary"
                    app:boxStrokeWidth="3dp"
                    app:hintEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/shopNm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:maxLength="20"
                        android:maxLines="1"
                        android:textColor="@color/grayX" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.Material3.TextInputEditText.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:hint="Runner Phone No."
                    android:translationY="-10dp"
                    app:boxBackgroundColor="@color/whiteX"
                    app:boxStrokeColor="?colorPrimary"
                    app:boxStrokeWidth="3dp"
                    app:placeholderText="01xxx-xxxxxx"
                    app:placeholderTextColor="@color/grayX">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/pnNo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLength="12"
                        android:maxLines="1"
                        android:textColor="@color/grayX" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="26dp"
                    android:layout_marginVertical="6dp"
                    android:hint="Runner Type"
                    android:translationY="-10dp"
                    app:boxBackgroundColor="@color/whiteX"
                    app:boxStrokeColor="?colorPrimary"
                    app:boxStrokeWidth="3dp">

                    <AutoCompleteTextView
                        android:id="@+id/type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        android:labelFor="@id/type"
                        android:textColor="@color/grayX"
                        app:simpleItems="@array/type" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/btnRegister"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_gravity="bottom"
                        android:layout_marginHorizontal="35dp"
                        android:layout_marginBottom="16dp"
                        android:background="@drawable/btn_tia_bg"
                        android:clickable="true"
                        android:elevation="2dp"
                        android:focusable="true"
                        android:fontFamily="@font/ubuntu_bold"
                        android:gravity="center"
                        android:text="Register Now"
                        android:textColor="@color/whiteX"
                        android:textSize="20sp" />
                </LinearLayout>
            </LinearLayout>


        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loadingLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/whiteX"
        android:visibility="gone">


        <ImageView
            android:id="@+id/img"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:layout_marginTop="150dp"
            android:contentDescription="@string/logo"
            android:transitionName="logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            app:indicatorColor="@color/tia"
            app:indicatorInset="20dp"
            app:indicatorSize="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img"
            app:trackCornerRadius="5dp"
            app:trackThickness="14dp" />


        <!--  <com.google.android.material.floatingactionbutton.FloatingActionButton-->
        <!--  android:id="@+id/fab"-->
        <!--  android:layout_width="wrap_content"-->
        <!--  android:layout_height="wrap_content"-->
        <!--  android:layout_gravity="bottom|end"-->
        <!--  android:layout_marginEnd="16dp"-->
        <!--  android:layout_marginBottom="16dp"-->
        <!--  app:srcCompat="@android:drawable/ic_dialog_email" />-->

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>